--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,16 +44,17 @@
   display: block; }
 
 .text_title {
-  width: 850px;
+  width: 900px;
   max-width: 100%;
   margin: 0px auto;
   text-align: center;
-  font-size: 26px;
-  font-family: "Philosopher";
-  font-weight: normal;
+  font-size: 28px;
+  font-family: "Manrope", sans-serif;
+  font-weight: 500;
   font-style: normal;
-  font-display: swap;
-  margin-bottom: 15px !important; }
+  color: #dba338;
+  margin-bottom: 15px !important;
+  line-height: 1.3 !important; }
 
 .text_content {
   width: 700px;
@@ -62,9 +63,10 @@
   text-align: left;
   font-size: 18px;
   position: relative;
-  font-family: "K2D";
-  font-weight: normal;
-  font-style: normal; }
+  font-family: "Manrope", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #444444; }
 
 .group_image {
   position: relative;
@@ -114,16 +116,19 @@
   font-size: 30px;
   font-family: "Manrope", sans-serif;
   font-weight: 700;
-  font-style: normal; }
+  font-style: normal;
+  line-height: 1.2 !important;
+  color: #0e2441; }
 .quote-area .quotes-author {
   text-align: center;
   font-size: 22px;
   font-family: "Manrope", sans-serif;
   font-weight: 600;
-  font-style: normal; }
+  font-style: normal;
+  color: #0e2441; }
 .quote-area .img-icon-quote {
-  margin-top: 65px;
-  margin-bottom: 60px; }
+  margin-top: 55px;
+  margin-bottom: 50px; }
 
 .area-1 {
   background-image: url(../images/bg-title-1.png);
@@ -138,7 +143,9 @@
   text-align: center;
   font-family: "Canela";
   font-weight: 500;
-  font-style: normal; }
+  font-style: normal;
+  line-height: 1.2 !important;
+  color: #0e2441; }
 
 .section-3 {
   padding-top: 20px; }
@@ -149,7 +156,18 @@
   position: relative; }
 
 .img-5 {
-  margin-top: -63%;
+  margin-top: -62%;
+  margin-bottom: 40px; }
+
+.area-2 {
+  margin-top: 80px;
+  background-image: url(../images/bg-title-2.png);
+  background-repeat: no-repeat;
+  background-position: center bottom 40px; }
+
+.img-3 {
+  border-radius: 28px;
+  margin-top: 15px;
   margin-bottom: 40px; }
 
 /*# sourceMappingURL=main.css.map */
