--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -12,16 +12,17 @@
 }
 
 .text_title {
-    width: 850px;
+    width: 900px;
     max-width: 100%;
     margin: 0px auto;
     text-align: center;
-    font-size: 26px;
-    font-family: "Philosopher";
-    font-weight: normal;
+    font-size: 28px;
+    font-family: "Manrope", sans-serif;
+    font-weight: 500;
     font-style: normal;
-    font-display: swap;
+    color: #dba338;
     margin-bottom: 15px !important;
+    line-height: 1.3 !important;
 }
 .text_content {
     width: 700px;
@@ -30,9 +31,10 @@
     text-align: left;
     font-size: 18px;
     position: relative;
-    font-family: "K2D";
-    font-weight: normal;
+    font-family: "Manrope", sans-serif;
+    font-weight: 400;
     font-style: normal;
+    color: #444444;
 }
 
 .group_image {
@@ -100,6 +102,8 @@
         font-family: "Manrope", sans-serif;
         font-weight: 700;
         font-style: normal;
+        line-height: 1.2 !important;
+        color: #0e2441;
     }
     .quotes-author {
         text-align: center;
@@ -107,10 +111,11 @@
         font-family: "Manrope", sans-serif;
         font-weight: 600;
         font-style: normal;
+        color: #0e2441;
     }
     .img-icon-quote {
-        margin-top: 65px;
-        margin-bottom: 60px;
+        margin-top: 55px;
+        margin-bottom: 50px;
     }
 }
 .area-1 {
@@ -129,6 +134,8 @@
     font-family: "Canela";
     font-weight: 500;
     font-style: normal;
+    line-height: 1.2 !important;
+    color: #0e2441;
 }
 
 //section-03
@@ -143,7 +150,19 @@
     position: relative;
 }
 .img-5 {
-    margin-top: -63%;
+    margin-top: -62%;
+    margin-bottom: 40px;
+}
+
+.area-2 {
+    margin-top: 80px;
+    background-image: url(../images/bg-title-2.png);
+    background-repeat: no-repeat;
+    background-position: center bottom 40px;
+}
+.img-3 {
+    border-radius: 28px;
+    margin-top: 15px;
     margin-bottom: 40px;
 }
 
