--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -145,7 +145,14 @@
   font-weight: 500;
   font-style: normal;
   line-height: 1.2 !important;
-  color: #0e2441; }
+  color: #0e2441;
+  margin-bottom: 30px !important; }
+
+.sub-title-2 {
+  margin-bottom: 0px !important; }
+
+.sub-title-4 {
+  margin-bottom: 30px !important; }
 
 .section-3 {
   padding-top: 20px; }
@@ -169,5 +176,191 @@
   border-radius: 28px;
   margin-top: 15px;
   margin-bottom: 40px; }
+
+.section-4 {
+  padding-top: 40px;
+  padding-bottom: 40px; }
+
+.group_img_3 {
+  margin-bottom: 40px; }
+
+.group_img_4 {
+  margin: 0;
+  margin-left: calc((100% - 700px) / 2);
+  margin-top: 50px; }
+
+.img-6 {
+  margin-top: -46%; }
+
+.img-7 {
+  margin-top: -47%;
+  margin-bottom: 40px; }
+
+.group_img_5 {
+  margin-top: -7%;
+  margin-bottom: 40px; }
+
+.img-9 {
+  margin-top: -17%; }
+
+.author {
+  margin-top: -40px;
+  padding-bottom: 30px; }
+
+.slide-container {
+  margin: 0 auto;
+  position: relative;
+  z-index: 10;
+  margin-top: 10%;
+  width: calc(100% - 0px); }
+
+.swiper {
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  overflow: visible; }
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  transition: all 0.5s;
+  border-radius: 20px; }
+
+.swiper-slide img {
+  display: block;
+  border-radius: 20px;
+  transition: all 1s;
+  transform: scale(1.7);
+  opacity: 0; }
+
+.swiper-slide-active {
+  position: relative;
+  z-index: 10; }
+  .swiper-slide-active img {
+    transform: scale(2.1);
+    opacity: 1;
+    transition: all 0.5s; }
+
+.swiper-slide-next {
+  position: relative;
+  z-index: 5; }
+  .swiper-slide-next img {
+    margin-left: -52%;
+    opacity: 0.5;
+    transition: all 0.5s; }
+
+.swiper-slide-prev {
+  position: relative;
+  z-index: 5; }
+  .swiper-slide-prev img {
+    margin-right: -52%;
+    opacity: 0.5;
+    transition: all 0.5s; }
+
+.swiper-button-next {
+  width: 90px;
+  height: 90px;
+  right: 64px !important; }
+  .swiper-button-next::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-image: url(../images/btn-next.png);
+    background-repeat: no-repeat;
+    background-size: contain; }
+
+.swiper-button-prev {
+  width: 90px;
+  height: 90px;
+  left: 64px !important; }
+  .swiper-button-prev::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-image: url(../images/btn-prev.png);
+    background-repeat: no-repeat;
+    background-size: contain; }
+
+.swiper-pagination {
+  bottom: -45% !important; }
+
+.swiper-pagination-bullet {
+  width: 20px;
+  background-color: #dba338;
+  height: 20px;
+  opacity: 1; }
+
+.swiper-pagination-bullet-active {
+  background-color: white; }
+
+.group_img_2 {
+  margin-top: 60px; }
+
+.group_img_3 {
+  width: 1332px; }
+
+@media (max-width: 1600px) {
+  .group_img_1 {
+    width: 56%; }
+
+  .group_img_2,
+  .img-3 {
+    width: calc(100% - 60px); }
+
+  .img-2 {
+    width: 78%; }
+
+  .group_img_4 {
+    width: 55%; } }
+@media (max-width: 1440px) {
+  .img-6 {
+    margin-top: -37%; }
+
+  .swiper-button-next {
+    right: 32px !important;
+    top: 50%; }
+
+  .swiper-button-prev {
+    left: 32px !important; }
+
+  .group_img_1 {
+    width: 61%; } }
+@media (max-width: 1024px) {
+  .group_img_4 {
+    width: 72%;
+    margin: 0 auto;
+    margin-top: 40px; }
+
+  .img-7 {
+    margin-top: -42%; } }
+@media (max-width: 820px) {
+  .section-2 {
+    padding-top: 30px;
+    padding-bottom: 30px; }
+
+  .text_title {
+    font-size: 24px; }
+
+  .area-2 .quotes {
+    font-size: 22px; }
+    .area-2 .quotes br {
+      display: none; }
+
+  .quote-area {
+    padding-left: 30px;
+    padding-right: 30px; }
+
+  .swiper-button-next {
+    width: 55px;
+    height: 55px;
+    right: 18px !important; }
+
+  .swiper-button-prev {
+    width: 55px;
+    height: 55px;
+    left: 18px !important; }
+
+  .img-9 {
+    margin-top: -13%; } }
 
 /*# sourceMappingURL=main.css.map */
