--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -394,12 +394,20 @@
 
 @media (min-width: 577px) {
     .mobile {
-        // display: none !important;
+        display: none !important;
     }
 }
 
 @media (max-width: 576px) {
     .pc {
-        // display: none !important;
+        display: none !important;
+    }
+    .section-1 {
+        .group_img_1 {
+            position: relative;
+            top: 0;
+            right: 0;
+            width: 100%;
+        }
     }
 }
