--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -226,37 +226,6 @@
   transition: all 0.5s;
   border-radius: 20px; }
 
-.swiper-slide img {
-  display: block;
-  border-radius: 20px;
-  transition: all 1s;
-  transform: scale(1.7);
-  opacity: 0; }
-
-.swiper-slide-active {
-  position: relative;
-  z-index: 10; }
-  .swiper-slide-active img {
-    transform: scale(2.1);
-    opacity: 1;
-    transition: all 0.5s; }
-
-.swiper-slide-next {
-  position: relative;
-  z-index: 5; }
-  .swiper-slide-next img {
-    margin-left: -52%;
-    opacity: 0.5;
-    transition: all 0.5s; }
-
-.swiper-slide-prev {
-  position: relative;
-  z-index: 5; }
-  .swiper-slide-prev img {
-    margin-right: -52%;
-    opacity: 0.5;
-    transition: all 0.5s; }
-
 .swiper-button-next {
   width: 90px;
   height: 90px;
@@ -364,7 +333,38 @@
     margin-top: -13%; } }
 @media (min-width: 577px) {
   .mobile {
-    display: none !important; } }
+    display: none !important; }
+
+  .swiper-slide img {
+    display: block;
+    border-radius: 20px;
+    transition: all 1s;
+    transform: scale(1.7);
+    opacity: 0; }
+
+  .swiper-slide-active {
+    position: relative;
+    z-index: 10; }
+    .swiper-slide-active img {
+      transform: scale(2.1);
+      opacity: 1;
+      transition: all 0.5s; }
+
+  .swiper-slide-next {
+    position: relative;
+    z-index: 5; }
+    .swiper-slide-next img {
+      margin-left: -52%;
+      opacity: 0.5;
+      transition: all 0.5s; }
+
+  .swiper-slide-prev {
+    position: relative;
+    z-index: 5; }
+    .swiper-slide-prev img {
+      margin-right: -52%;
+      opacity: 0.5;
+      transition: all 0.5s; } }
 @media (max-width: 576px) {
   .pc {
     display: none !important; }
@@ -373,6 +373,158 @@
     position: relative;
     top: 0;
     right: 0;
-    width: 100%; } }
+    width: 100%; }
+
+  .area-1 {
+    background-image: url(../images/bg-title-1-m.png); }
+
+  .text_title {
+    padding-left: 15px;
+    padding-right: 15px; }
+    .text_title br {
+      display: none; }
+
+  .section-2 {
+    padding-top: 5px; }
+
+  .quote-area .quotes {
+    font-size: 24px; }
+
+  .quote-area .quotes-author {
+    font-size: 20px; }
+
+  .area-1 {
+    background-position: center bottom -25px; }
+
+  .quote-area .img-icon-quote {
+    margin-top: 40px;
+    margin-bottom: 35px;
+    width: 90px; }
+
+  .group_text {
+    padding-left: 15px;
+    padding-right: 15px; }
+
+  .quote-area {
+    padding-left: 0px;
+    padding-right: 0px; }
+
+  .sub-title {
+    font-size: 40px; }
+
+  .section-3 {
+    padding-top: 0px; }
+
+  .img-5 {
+    margin-top: -74%;
+    margin-bottom: 20px; }
+
+  .area-2 {
+    background-image: url(../images/bg-title-2-m.png); }
+
+  .quotes {
+    padding-left: 15px;
+    padding-right: 15px; }
+
+  .img-2 {
+    width: calc(100% - 40px); }
+
+  .area-2 {
+    margin-top: 50px; }
+
+  .group_img_2 {
+    margin-top: 40px;
+    margin-bottom: 30px; }
+
+  .section-4 {
+    padding-top: 30px;
+    padding-bottom: 30px; }
+
+  .group_img_4 {
+    width: calc(100% - 60px); }
+
+  .img-6 {
+    margin-top: -29%; }
+
+  .swiper-slide img {
+    border-radius: 18px; }
+
+  .slide-container {
+    margin-top: 40px;
+    padding-left: 10px;
+    padding-right: 10px; }
+
+  .swiper {
+    padding-top: 0px;
+    overflow: hidden;
+    padding-bottom: 0;
+    border-radius: 18px; }
+
+  .swiper-pagination {
+    bottom: -12% !important; }
+
+  .swiper-button-next {
+    right: 3px !important; }
+
+  .swiper-button-prev {
+    left: 3px !important; }
+
+  .swiper-pagination-bullet {
+    width: 15px;
+    height: 15px; }
+
+  .img-7 {
+    margin-top: -50%; }
+
+  .author {
+    font-size: 16px;
+    margin-top: -5px;
+    padding-bottom: 20px; } }
+@media (max-width: 440px) {
+  .img-line {
+    margin-bottom: 30px; }
+
+  .sub-title {
+    margin-bottom: 25px !important; }
+
+  .section-2 {
+    padding-bottom: 20px; }
+
+  .img-2 {
+    margin-top: 40px; }
+
+  .area-2 {
+    margin-top: 40px; }
+
+  .sub-title.sub-title-2 {
+    margin-bottom: 0 !important; }
+
+  .quote-area .quotes {
+    font-size: 21px; }
+
+  .group_img_2,
+  .img-3 {
+    width: calc(100% - 30px); }
+
+  .sub-title {
+    font-size: 33px; }
+
+  .group_img_5 {
+    margin-bottom: 30px; }
+
+  .quote-area .quotes-author {
+    font-size: 18px; }
+
+  .section-4 {
+    padding-top: 20px; }
+
+  .group_img_3 {
+    margin-bottom: 30px; }
+
+  .img-7 {
+    margin-bottom: 30px; } }
+@media (max-width: 414px) {
+  .text_title {
+    font-size: 22px; } }
 
 /*# sourceMappingURL=main.css.map */
